tests/fixtures/invalid/bytes_sub_dict.py
# Cannot subtract Bytes and Dict[str, int]
x: bytes = b"hello" - {"a": 1}
